# UniqueLab_Assignment

./: .gitmodules  Readme.md
Assignment1/: sellMoe.cpp
Assignment1/BRT/: BRT.cpp  BRT.h  a.out  main.cpp  set  set.cpp  set.h  set1  set1.cpp
Assignment2/: readme.md
Assignment2/CPP/: CMakeLists.txt  main.c  main.cpp
Assignment2/CPP/libs/: CMakeLists.txt  PlainText.h  PlanText.cpp  basic_libs.h  dirqueue.cpp  dirqueue.h  error_functions.cpp  error_functions.h  searcher.cpp  searcher.h  updatedb_basic.cpp  updatedb_basic.h
Assignment2/CPP/searcher/: CMakeLists.txt  main.cpp
Assignment2/CPP/searcher/libs/: CMakeLists.txt  dirqueue.cpp  dirqueue.h  error_functions.cpp  searcher.cpp  searcher.h
Assignment2/indexer/: CMakeLists.txt  main.cpp
Assignment2/indexer/libs/: PlainText.cpp  basic_libs.h  error_functions.h  redis_connect.cpp  updatedb_basic.cpp
Assignment2/indexer_multi/: CMakeLists.txt  main.cpp
Assignment2/indexer_multi/libs/: CMakeLists.txt  PlainText.cpp  PlainText.h  basic_libs.h  dirqueue.h  error_functions.h  fileQueue.cpp  fileQueue.h  updatedb_basic.cpp  updatedb_basic.h
Assignment2/process/: Readme.md
Assignment2/searcher/: CMakeLists.txt  main.cpp
Assignment2/searcher/libs/: CMakeLists.txt  basic_libs.h  searcher_basic.cpp  searcher_basic.h
Assignment3/: Introduction.md
Assignment3/dns_server/src/: start.py
Assignment3/dns_server/src/dns/: .gitignore  dnshandler.py  server_asyncio.py  server_ipv6.py  server_thread.py
Assignment3/dns_server/src/dns/dnsauth/: dnsauth.py  dnsauthsaver.py
Assignment3/dns_server/src/dns/dnscache/: dnscache.py  dnscache_LRU.py  dnscache_async.py
Assignment3/dns_server/src/dns/dnsrecord/: dnsrecord.py
Assignment3/dns_server/src/dns/dnsrecord/field/: bitsopr.py  codes.py  dnsflag.py  dnsheader.py  dnsname.py  dnssec.py  rdata.py
Assignment3/dns_server/src/dns/dnsresolve/: dnsrecord.py  dnsresolver.py  packet_resolve.py
Assignment3/dns_server/src/dns/dnsresolve/field/: __init__.py  bitsopr.py  codes.py  dnsflag.py  dnsheader.py  dnsname.py  dnssec.py  rdata.py
Assignment4/Preparations/: GFW Rule List.md  Linux.md  Local To Sever.ipynb  LocalToServer.md  NAT.md  Python.md  Python2.md  Shadowsocks.md  Traverse.html  encryption.md
Assignment4/proxy/PAC/: black_list_derep  black_list_out  dereplication.py  gfwlist.txt  prehandler.py  replace.py  replace_black.py  white_list  white_list_out
Assignment4/proxy/USERPASS/: password_gen.py  password_lst  token_lst
Assignment4/proxy/src/: SOCKS_cli.py  Server.py  black_list  cli_no_pass.py  client.py  config.json  config_ali.josn  config_remote.json  handler.py  local.py  proxy.py  proxy_local.py  proxy_srv.py  server.py  token_lst
Assignment4/proxy/src/SOCKS/: Server.py  handler.py  proxy_local.py  proxy_srv.py
Assignment4/proxy/src/SOCKS/config/: Config.py
Assignment4/proxy/src/SOCKS/cryptor/: cipher.old.py  cipher.py
Assignment4/proxy/src/SOCKS/resolver/: codes.py  connect.py  nego.py  udp.py
Assignment4/proxy/src/cryptor/: cipher.py
Assignment4/proxy/src/resolver/: support.py  userpass.py
Assignment4/script/: a  b  find_missing.py
Assignment4/traversal/src/: config.json  traversal.py
Assignment4/traversal/src/Traversal/: Server.py  basic.py  error.py  handler.py  tra_local.py  tra_server.py
Assignment4/traversal/src/Traversal/cryptor/: cipher.py
Assignment4/traversal/src/Traversal/resolver/: codes.py  connect.py  forward.py  handshake.py
Assignment5/src/prime/groups/: main.c
Assignment5/src/rwlock/: CMakeLists.txt
Assignment5/src/rwlock/libs/: rw_lock.c  rw_lock.h  rw_lock.old.c
Assignment5/src/words/: CMakeLists.txt  main.cpp
Assignment5/src/words/libs/: CMakeLists.txt  FileRead.cpp  FileRead.h  PlainText.cpp  PlainText.h  Threadsafe_queue.cpp  Threadsafe_queue.h  basic_libs.h  sortWords.cpp  sortWords.h  word_sort.cpp  word_sort.h
