add_library(error_functions error_functions.cpp)
add_library(updatedb_basic updatedb_basic.cpp)
add_library(dirqueue dirqueue.cpp)
add_library(PlainText PlainText.cpp)
add_library(filequeue fileQueue.cpp)
 FIND_PACKAGE( OpenMP REQUIRED)  
if(OPENMP_FOUND)  
message("OPENMP FOUND")  
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")  
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")  
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")  
endif()  